--- a/user/public/index.html
+++ b/user/public/index.html
@@ -15,7 +15,7 @@
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit-icons.min.js"></script>
   <link rel="stylesheet" type="text/css" href="../src/index.css">
   
-  <title>Login</title>
+  <title>無名茶行管理系統</title>
 </head>
 
 <body>
